<resources>
    <string name="app_company">MADE BY SOFIA</string>
    <string name="app_name">OpenEvents</string>
    <string name="title">OpenEvents</string>
    <string name="sign_up_title">Fill all the camps pls!</string>
    <string name="sign_up_mail">e-mail</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_last">LastName</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_in_button">Log in</string>
    <string name="sign_up_text">Don\'t you have an account?</string>
    <string name="create_butt">CREATE EVENT</string>
    <string name="create_title">Title</string>
    <string name="create_description">Description</string>
    <string name="create_start_date">Start date</string>
    <string name="create_end_date">End date</string>
    <string name="create_event">Create Event ✍️</string>
    <string name="create_location">Location (min length 5)</string>
    <string name="create_start_time">Start time</string>
    <string name="create_end_time">End time</string>
    <string name="create_image_upload">Upload cover image</string>
    <string name="explore_events_title">Explore events ⚡</string>
    <string name="title_people">People 🤗</string>
    <string name="title_search">Search Friends 🧐</string>
    <string name="search_text">Search for name, last name or email</string>
    <string name="search_results">matching results found:</string>
    <string name="title_my_events">My Events 🥳</string>
    <string name="title_comment">Comment and Rate 🤭</string>
    <string name="comment_butt">SUBMIT</string>
    <string name="comment_comment">Comment</string>
    <string name="comment_rating">Rating (0 to 10)</string>
    <string name="comment_event">---</string>
    <string name="their_friends">THEIR FRIENDS</string>
    <string name="their_statistics">THEIR STATISTICS</string>
    <string name="my_statistics">MY STATISTICS</string>
    <string name="my_friends">MY FRIENDS</string>
    <string name="score">Score: %1$s</string>
    <string name="comments">Number of comments: %1$d</string>
    <string name="commenters">\%% of commenters: %01$s</string>
    <string name="join">JOIN IN!</string>
    <string name="edit_event">EDIT EVENT</string>
    <string name="edit_title">Edit Event 🔧</string>
    <string name="edit_description">Fill the new information</string>
    <string name="edit_description_2">(date and time have to be filled)</string>
    <string name="delete_button">DELETE EVENT</string>

    <string name="searchEvent_keyword">Search event by name or keyword</string>
    <string name="searchEvent_location">Search event by location</string>
    <string name="searchEvent_date">Start date</string>
    <string name="title_searchEvent">Search Events</string>
    <string name="serach_event_hint">Search by name, location or date</string>
    <string name="log_out">LOG OUT</string>
    <string name="follow">follow</string>

    <string name="edit_profile">edit profile</string>
    <string name="edit_profile_title">Edit Profile ⚙️</string>
    <string name="edit_profile_image">Image (min length 8)</string>
    <string name="edit_profile_button">EDIT PROFILE</string>
    <string name="edit_profile_text">(fill password for confirmation or change it)</string>
    <string name="edit_event_participants">Num Participants</string>
    <string name="info_event_unjoin">UNJOIN</string>


    <string-array name="dropCategories">
        <item>Categories</item>
        <item>Education</item>
        <item>Food</item>
        <item>Sports</item>
        <item>Concerts</item>
        <item>Museums</item>
        <item>Games</item>
        <item>Travel</item>
        <item>Others</item>
    </string-array>

</resources>