<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Event_Activity">

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#EFF4FA">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_title"
            android:textSize="30sp"
            android:textColor="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/edit_description"
            android:textSize="20sp"
            android:textColor="#6C6B6B"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/edit_description_2"
            android:textSize="20sp"
            android:textColor="#6C6B6B"
            android:layout_marginTop="40dp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#92C7D9ED"
            android:hint="@string/create_title"
            android:inputType="text"
            android:padding="15dp"
            android:layout_marginTop="15dp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <EditText
            android:id="@+id/editDescription"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#92C7D9ED"
            android:hint="@string/create_description"
            android:inputType="text"
            android:padding="15dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3"
        android:background="#92C7D9ED">

        <Spinner
            android:id="@+id/createCategory"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:popupBackground="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:entries="@array/dropCategories"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/editStartDate"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:hint="@string/create_start_date"
            android:inputType="date"
            android:padding="15dp"
            android:layout_marginStart="35dp"/>

        <EditText
            android:id="@+id/editStartTime"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:hint="@string/create_start_time"
            android:inputType="time"
            android:padding="15dp"
            android:layout_marginEnd="35dp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout6"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

        <EditText
            android:id="@+id/editEndDate"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:hint="@string/create_end_date"
            android:inputType="date"
            android:padding="15dp"
            android:layout_marginStart="35dp"/>

        <EditText
            android:id="@+id/editEndTime"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:hint="@string/create_end_time"
            android:inputType="time"
            android:padding="15dp"
            android:layout_marginEnd="35dp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout7"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout6">

        <EditText
            android:id="@+id/editLocation"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#92C7D9ED"
            android:hint="@string/create_location"
            android:inputType="text"
            android:padding="15dp" />

    </FrameLayout>

    <Button
        android:id="@+id/editEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7"
        android:backgroundTint="#254973"/>


</androidx.constraintlayout.widget.ConstraintLayout>