<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Event_Activity">

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#EFF4FA">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_profile_title"
            android:textSize="30sp"
            android:textColor="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/edit_description"
            android:textSize="20sp"
            android:textColor="#6C6B6B"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/edit_profile_text"
            android:textSize="20sp"
            android:textColor="#6C6B6B"
            android:layout_marginTop="25dp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <EditText
            android:id="@+id/editName"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#92C7D9ED"
            android:hint="@string/sign_up_name"
            android:inputType="text"
            android:padding="15dp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <EditText
            android:id="@+id/editLast"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#92C7D9ED"
            android:hint="@string/sign_up_last"
            android:inputType="text"
            android:padding="15dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout4"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#92C7D9ED"
            android:hint="@string/sign_up_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout4"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#92C7D9ED"
            android:hint="@string/sign_up_password"
            android:inputType="textPassword"
            android:padding="15dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout7"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

        <EditText
            android:id="@+id/editImage"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#92C7D9ED"
            android:hint="@string/edit_profile_image"
            android:inputType="text"
            android:padding="15dp" />

    </FrameLayout>

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7"
        android:backgroundTint="#254973"
        android:layout_marginTop="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>