<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Event_Activity">

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#EFF4FA">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_comment"
            android:textSize="30sp"
            android:textColor="@color/black" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout1">

        <TextView
            android:id="@+id/eventName"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#97AECA"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/comment_event"
            android:textSize="20sp"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

        <EditText
            android:id="@+id/comment"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:background="#C6D6EA"
            android:hint="@string/comment_comment"
            android:inputType="text"
            android:padding="15dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout7"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

        <EditText
            android:id="@+id/rating"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#C6D6EA"
            android:hint="@string/comment_rating"
            android:inputType="number"
            android:padding="15dp" />

    </FrameLayout>

    <Button
        android:id="@+id/commentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_butt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout7"
        android:backgroundTint="#254973"/>


</androidx.constraintlayout.widget.ConstraintLayout>