<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create_Event_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EFF4FA"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/create_event"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout1">

                <EditText
                    android:id="@+id/createTitle"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="#92C7D9ED"
                    android:hint="@string/create_title"
                    android:inputType="text"
                    android:padding="15dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout2">

                <EditText
                    android:id="@+id/createDescription"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="#92C7D9ED"
                    android:hint="@string/create_description"
                    android:inputType="text"
                    android:padding="15dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#92C7D9ED"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout3">

                <Spinner
                    android:id="@+id/createCategory"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:entries="@array/dropCategories"
                    android:popupBackground="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout4">

                <EditText
                    android:id="@+id/createStartDate"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="35dp"
                    android:hint="@string/create_start_date"
                    android:inputType="date"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/createStartTime"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="35dp"
                    android:hint="@string/create_start_time"
                    android:inputType="time"
                    android:padding="15dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout5">

                <EditText
                    android:id="@+id/createEndDate"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="35dp"
                    android:hint="@string/create_end_date"
                    android:inputType="date"
                    android:padding="15dp" />

                <EditText
                    android:id="@+id/createEndTime"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="35dp"
                    android:hint="@string/create_end_time"
                    android:inputType="time"
                    android:padding="15dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout7"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout6">

                <EditText
                    android:id="@+id/createLocation"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="#92C7D9ED"
                    android:hint="@string/create_location"
                    android:inputType="text"
                    android:padding="15dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout8"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout7">

                <EditText
                    android:id="@+id/createImage"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="#92C7D9ED"
                    android:hint="@string/create_image_upload"
                    android:inputType="text"
                    android:padding="15dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameLayout9"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout8">

                <EditText
                    android:id="@+id/createParticipants"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="#92C7D9ED"
                    android:hint="@string/edit_event_participants"
                    android:inputType="number"
                    android:padding="15dp" />

            </FrameLayout>

            <Button
                android:id="@+id/createEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#254973"
                android:text="@string/create_butt"
                android:layout_marginBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frameLayout9" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>